# advent-of-code

./: .editorconfig  .env.dist  .gitignore  Cargo.toml  Justfile  README.md  rust-toolchain.toml
editions/aoc-2020/: Cargo.toml
editions/aoc-2020/src/day01/: part1.rs  part2.rs
editions/aoc-2020/src/day03/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2020/src/day04/: part1.rs  part2.rs
editions/aoc-2020/src/day05/: common.rs
editions/aoc-2020/src/day06/: mod.rs
editions/aoc-2020/src/day07/: common.rs  mod.rs  part1.rs
editions/aoc-2020/src/day08/: mod.rs  part1.rs
editions/aoc-2020/src/day09/: common.rs
editions/aoc-2020/src/day10/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2020/src/day11/: common.rs  mod.rs  part1.rs
editions/aoc-2020/src/day12/: common.rs  part1.rs
editions/aoc-2020/src/day13/: part2.rs
editions/aoc-2020/src/day14/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2020/src/day15/: common.rs
editions/aoc-2020/src/day16/: mod.rs  part1.rs
editions/aoc-2020/src/day17/: part1.rs
editions/aoc-2020/src/day18/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2020/src/day19/: part2.rs
editions/aoc-2020/src/day20/: common.rs  part2.rs
editions/aoc-2020/src/day21/: part2.rs
editions/aoc-2020/src/day22/: mod.rs  part1.rs
editions/aoc-2020/src/day23/: common.rs  mod.rs  part2.rs
editions/aoc-2020/src/day24/: common.rs  part1.rs
editions/aoc-2020/src/day25/: common.rs  part1.rs  part2.rs
editions/aoc-2021/: Cargo.toml
editions/aoc-2021/src/day01/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day02/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day03/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day04/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day05/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day06/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day07/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day08/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day09/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day10/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day11/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day12/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day13/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day14/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day15/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2021/src/day16/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2022/: Cargo.toml
editions/aoc-2022/src/day01/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2022/src/day02/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2022/src/day03/: common.rs  mod.rs  part1.rs  part2.rs
editions/aoc-2022/src/day04/: common.rs  mod.rs  (+2 more)
editions/aoc-2023/: Cargo.toml
editions/aoc-2024/: Cargo.toml
toolkit/aoc-sx/: Cargo.toml
toolkit/aoc-sx-algo/: Cargo.toml
toolkit/aoc-sx-algo/src/: fs.rs  lib.rs  math.rs  parse.rs
toolkit/aoc-sx-cli/: Cargo.toml
toolkit/aoc-sx-cli/src/: config.rs  logging.rs  main.rs
toolkit/aoc-sx-codegen/: Cargo.toml
toolkit/aoc-sx-codegen/src/: lib.rs  parser.rs
toolkit/aoc-sx-core/: Cargo.toml
toolkit/aoc-sx-core/src/: exercise.rs
toolkit/aoc-sx-ui/: Cargo.toml
toolkit/aoc-sx-webclient/: Cargo.toml
toolkit/aoc-sx-webclient/src/: lib.rs
toolkit/aoc-sx/src/: lib.rs
(+150 files in other folders)
