[package]
name = "aoc-sx-webclient"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-sx-core = { path = "../aoc-sx-core" }

cookie_store = "0.21.1"
ureq = { version = "2.11.0", features = ["cookies"] }

scraper = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
